<resources>
    <string name="app_name">MADproject</string>
    <string name="name">Enter Name</string>
    <string name="age">Enter Age</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="height">Enter Height(cm)</string>
    <string name="weight">Enter Weight(kg)</string>
    <string name="place">Where do you train?</string>
    <string name="gym">Gym</string>
    <string name="hom">Home</string>
    <string name="office">Office</string>
    <string name="confirm">Confirm</string>
    <string name="userhealth">User Health Profile</string>
    <string name="hname">Name</string>
    <string name="hage">Age</string>
    <string name="hgender">Gender</string>
    <string name="hheight">Height(cm)</string>
    <string name="hweight">Weight</string>
    <string name="htrain">Train at</string>
    <string name="rohan">Rohan</string>
    <string name="aage">21</string>
    <string name="userpropic">Insert</string>
    <string name="mmale">Male</string>
    <string name="hpheight">175</string>
    <string name="hpweight">75</string>
    <string name="hpgym">Gym</string>
    <string name="update">Update</string>
    <string name="reset">Reset</string>
    <string name="bmi">Calculate BMI</string>
    <string name="progress">My Progress</string>
    <string name="bmical">BMI Calculator</string>
    <string name="calculate">Calculate</string>
    <string name="value">Value</string>
    <string name="bmiindicator">BMI Indicator</string>
    <string name="result">Result</string>
    <string name="resultvalue">Healthy</string>
    <string name="myprogress">My Progress</string>
    <string name="description">Health Description</string>
    <string name="bmvalue">24</string>
    <string name="todo">TODO</string>
    <string name="userhealthprofile">User Health Profile</string>
    <string name="healthpro">Health Profile</string>
    <string name="bmicalculator">BMI Calculator</string>
    <string name="targetweight">Target Weight</string>
    <string name="currentweight">Current Weight</string>
    <string name="settarget">Set Target Date</string>
    <string name="progsave">Save</string>
    <string name="targetval">65kg</string>
    <string name="currentval">75kg</string>
    <string name="targetdate">12/12/2021</string>
</resources>