<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity2">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="126dp"
        android:layout_height="291dp"
        android:layout_marginStart="43dp"
        android:layout_marginLeft="43dp"
        android:layout_marginTop="230dp"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/update"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/hname"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="#FFFFFF"
            android:fontFamily="@font/allerta"
            android:gravity="center|left"
            android:text="@string/hname"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/hage"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="#FFFFFF"
            android:fontFamily="@font/allerta"
            android:gravity="center|left"
            android:text="@string/hage"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/hgender"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="#FFFFFF"
            android:fontFamily="@font/allerta"
            android:gravity="center|left"
            android:text="@string/hgender"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/hheight"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="#FFFFFF"
            android:fontFamily="@font/allerta"
            android:gravity="center|left"
            android:text="@string/hheight"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/hweight"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="#FFFFFF"
            android:fontFamily="@font/allerta"
            android:gravity="center|left"
            android:text="@string/hweight"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/htrain"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="#FFFFFF"
            android:fontFamily="@font/allerta"
            android:gravity="center|left"
            android:text="@string/htrain"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="169dp"
        android:layout_height="291dp"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="240dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/bmi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent">

        <AutoCompleteTextView
            android:id="@+id/rohan"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:fontFamily="@font/allerta"
            android:gravity="center"
            android:text="@string/rohan" />

        <AutoCompleteTextView
            android:id="@+id/aage"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:fontFamily="@font/allerta"
            android:gravity="center"
            android:minHeight="48dp"
            android:text="@string/aage" />

        <AutoCompleteTextView
            android:id="@+id/mmale"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:fontFamily="@font/allerta"
            android:gravity="center"
            android:text="@string/mmale" />

        <AutoCompleteTextView
            android:id="@+id/hpheight"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:fontFamily="@font/allerta"
            android:gravity="center"
            android:text="@string/hpheight" />

        <AutoCompleteTextView
            android:id="@+id/hpweight"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:fontFamily="@font/allerta"
            android:gravity="center"
            android:text="@string/hpweight" />

        <AutoCompleteTextView
            android:id="@+id/hpgym"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:fontFamily="@font/allerta"
            android:gravity="center"
            android:text="@string/hpgym" />
    </LinearLayout>

    <Button
        android:id="@+id/update"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/allerta"
        android:text="@string/update"
        app:backgroundTint="@color/confirm"
        app:cornerRadius="50px"
        app:layout_constraintBottom_toTopOf="@+id/reset"
        app:layout_constraintEnd_toStartOf="@+id/bmi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:id="@+id/bmi"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:fontFamily="@font/allerta"
        android:text="@string/bmi"
        app:backgroundTint="@color/confirm"
        app:cornerRadius="50px"
        app:layout_constraintBottom_toTopOf="@+id/progress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/update"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <Button
        android:id="@+id/reset"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginStart="42dp"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="120dp"
        android:fontFamily="@font/allerta"
        android:text="@string/reset"
        app:backgroundTint="@color/confirm"
        app:cornerRadius="50px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/progress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update" />

    <Button
        android:id="@+id/progress"
        android:layout_width="154dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="130dp"
        android:fontFamily="@font/allerta"
        android:text="@string/progress"
        app:backgroundTint="@color/confirm"
        app:cornerRadius="50px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/reset"
        app:layout_constraintTop_toBottomOf="@+id/bmi" />

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="68dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reset" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="230dp"
        android:layout_marginBottom="7dp"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/untitled_design__1_"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/healthpro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="150dp"
        android:fontFamily="@font/allerta"
        android:gravity="center|top"
        android:text="@string/healthpro"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="11dp"
        android:layout_marginBottom="6dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toStartOf="@+id/imageView11"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_baseline_home_24" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="134dp"
        android:layout_marginLeft="134dp"
        android:layout_marginTop="13dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView13"
        app:layout_constraintHorizontal_bias="0.154"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_baseline_dehaze_24" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="233dp"
        android:layout_marginLeft="233dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView14"
        app:layout_constraintHorizontal_bias="0.18"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2"
        app:layout_constraintVertical_bias="0.2"
        app:srcCompat="@drawable/ic_baseline_notifications_none_24" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="344dp"
        android:layout_marginLeft="344dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="17dp"
        android:layout_marginBottom="7dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_baseline_person_24" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="143dp"
        android:layout_height="115dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="236dp"
        android:layout_marginRight="236dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/imageView4"
        app:srcCompat="@drawable/images222" />

</androidx.constraintlayout.widget.ConstraintLayout>