<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/place"
        android:layout_width="292dp"
        android:layout_height="23dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginEnd="75dp"
        android:layout_marginRight="75dp"
        android:fontFamily="@font/allerta"
        android:text="@string/place"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/gym"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weight"
        tools:fontFamily="@font/allerta" />

    <EditText
        android:id="@+id/age"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginEnd="67dp"
        android:layout_marginRight="67dp"
        android:ems="10"
        android:fontFamily="@font/allerta"
        android:hint="@string/age"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/male"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        tools:ignore="TextContrastCheck" />

    <RadioButton
        android:id="@+id/male"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:fontFamily="@font/allerta"
        android:text="@string/male"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/height"
        app:layout_constraintEnd_toStartOf="@+id/female"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/age"
        tools:ignore="TextContrastCheck" />

    <RadioButton
        android:id="@+id/female"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="130dp"
        android:layout_marginRight="130dp"
        android:fontFamily="@font/allerta"
        android:text="@string/female"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/male"
        app:layout_constraintTop_toBottomOf="@+id/age" />

    <EditText
        android:id="@+id/height"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginEnd="67dp"
        android:layout_marginRight="67dp"
        android:ems="10"
        android:fontFamily="@font/allerta"
        android:hint="@string/height"
        android:importantForAutofill="no"
        android:inputType="number|numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/weight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/male"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/weight"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginEnd="67dp"
        android:layout_marginRight="67dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:fontFamily="@font/allerta"
        android:hint="@string/weight"
        android:importantForAutofill="no"
        android:inputType="number|numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/place"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/height"
        tools:ignore="TextContrastCheck" />

    <RadioButton
        android:id="@+id/gym"
        android:layout_width="85dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:fontFamily="@font/allerta"
        android:text="@string/gym"
        app:layout_constraintBottom_toTopOf="@+id/confirm"
        app:layout_constraintEnd_toStartOf="@+id/hom"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/place"
        tools:ignore="TextContrastCheck" />

    <RadioButton
        android:id="@+id/hom"
        android:layout_width="85dp"
        android:layout_height="48dp"
        android:fontFamily="@font/allerta"
        android:text="@string/hom"
        app:layout_constraintBottom_toTopOf="@+id/confirm"
        app:layout_constraintEnd_toStartOf="@+id/office"
        app:layout_constraintStart_toEndOf="@+id/gym"
        app:layout_constraintTop_toBottomOf="@+id/place" />

    <RadioButton
        android:id="@+id/office"
        android:layout_width="85dp"
        android:layout_height="48dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:fontFamily="@font/allerta"
        android:text="@string/office"
        app:layout_constraintBottom_toTopOf="@+id/confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/hom"
        app:layout_constraintTop_toBottomOf="@+id/place" />

    <EditText
        android:id="@+id/name"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="67dp"
        android:layout_marginRight="67dp"
        android:ems="10"
        android:fontFamily="@font/allerta"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/name"
        android:textColor="@color/name"
        app:layout_constraintBottom_toTopOf="@+id/age"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView9"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/confirm"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginStart="39dp"
        android:layout_marginLeft="39dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:fontFamily="@font/allerta"
        android:text="@string/confirm"
        app:backgroundTint="@color/confirm"
        app:cornerRadius="50px"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gym"
        tools:ignore="TextContrastCheck" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="68dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm" />

    <ImageView
        android:id="@+id/userhealthpro"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="276dp"
        android:layout_marginRight="276dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="@+id/imageView9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView9"
        app:srcCompat="@drawable/ic_baseline_account_circle_24" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toStartOf="@+id/imageView10"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_baseline_home_24" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="246dp"
        android:layout_marginLeft="246dp"
        android:layout_marginEnd="108dp"
        android:layout_marginRight="108dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView8"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.347"
        app:srcCompat="@drawable/ic_baseline_notifications_none_24" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="354dp"
        android:layout_marginLeft="354dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_baseline_person_24" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="413dp"
        android:layout_height="227dp"
        android:layout_marginBottom="8dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/age"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/untitled_design__1_" />

    <TextView
        android:id="@+id/userhealthprofile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="90dp"
        android:fontFamily="@font/allerta"
        android:gravity="top"
        android:text="@string/userhealthprofile"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView9" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="62dp"
        android:layout_marginLeft="62dp"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="11dp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toStartOf="@+id/imageView7"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:srcCompat="@drawable/ic_baseline_dehaze_24" />

</androidx.constraintlayout.widget.ConstraintLayout>